; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_am-stats.c_sb_print_queries.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_am-stats.c_sb_print_queries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"%s\09%lld\0Aqps_%s\09%.3lf\0A\00", align 1
@now = common dso_local global i64 0, align 8
@start_time = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sb_print_queries(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* @now, align 8
  %13 = load i64, i64* @start_time, align 8
  %14 = sub nsw i64 %12, %13
  %15 = call i32 @safe_div(i64 %11, i64 %14)
  %16 = call i32 @sb_printf(i32* %7, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %8, i64 %9, i8* %10, i32 %15)
  ret void
}

declare dso_local i32 @sb_printf(i32*, i8*, i8*, i64, i8*, i32) #1

declare dso_local i32 @safe_div(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
